create base file

--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-<p>Mark Brown</p>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>New Orleans Saints</title>
+
+    </head>
+    <body>
+        <header>
+            <h1>New Orleans Saints</h1>
+            <h2>Running for the ring</h2>
+        </header>
+        <section id="main">
+        </main>
+        <footer>
+            <p>&copy; &Tab; Mark Brown, 2019</p>
+        </footer>
+    </body>
+
+
+
+
+
+
+</html>
