added nav and main structures

--- a/index.html
+++ b/index.html
@@ -9,8 +9,51 @@
             <h1>New Orleans Saints</h1>
             <h2>Running for the ring</h2>
         </header>
+        <section id="nav">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">HOF</a></li>
+                <li><a href="#">Coaches</a></li>
+            </ul>
+        </section>
         <section id="main">
-        </main>
+            <article>
+                <h3>George Rogers</h3>
+                <p>
+
+                </p>
+            </article>
+            <article>
+                <h3>Ricky Williams</h3>
+                <p>
+
+                </p>
+            </article>
+            <article>
+                <h3>Deuce McAlister</h3>
+                <p>
+
+                </p>
+            </article>
+            <article>
+                <h3>Reggie Bush</h3>
+                <p>
+
+                </p>
+            </article>
+            <article>
+                <h3>Mark Ingrahm</h3>
+                <p>
+
+                </p>
+            </article>
+            <article>
+                <h3>Alvin Kamara</h3>
+                <p>
+
+                </p>
+            </article>
+        </section>
         <footer>
             <p>&copy; &Tab; Mark Brown, 2019</p>
         </footer>
