added header and artile graphics

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <header>
+            <img src="images/fleur.png" width="260px" height="300px" alt="Saints fleur-de-lis logo" > &REG;
             <h1>New Orleans Saints</h1>
             <h2>Running for the ring</h2>
         </header>
@@ -18,42 +19,48 @@
         </section>
         <section id="main">
             <article>
+                <img src="images/george.jpg">
                 <h3>George Rogers</h3>
                 <p>
 
                 </p>
             </article>
             <article>
+                <img src="images/ricky.jpg" height="150px width="150px" alt="Ricky Williams">
                 <h3>Ricky Williams</h3>
                 <p>
 
                 </p>
             </article>
             <article>
+                <img src="images/deuce.jpg" height="150px" width="150px"alt="Deuce McAlister">
                 <h3>Deuce McAlister</h3>
                 <p>
 
                 </p>
             </article>
             <article>
+                <img src="images/reggie.jpg" height="150px" width="150px" alt="Reggie Bush">
                 <h3>Reggie Bush</h3>
                 <p>
 
                 </p>
             </article>
             <article>
+                <img src="images/mark.jpg" height="150px" width="150px" alt="Mark Ingrahm">
                 <h3>Mark Ingrahm</h3>
                 <p>
 
                 </p>
             </article>
             <article>
+                <img src="images/alvin.jpg" height="150px" width="150px" alt="Alvin Kamara">
                 <h3>Alvin Kamara</h3>
                 <p>
 
                 </p>
             </article>
-        </section>
+        </main>
         <footer>
             <p>&copy; &Tab; Mark Brown, 2019</p>
         </footer>
