--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </section>
         <section id="main">
             <article>
-                <img src="images/george.jpg">
+                <img src="images/george.jpg" height="150px width="150px" alt="George Rogers">
                 <h3>George Rogers</h3>
                 <p>
 
