--- a/index.html
+++ b/index.html
@@ -2,103 +2,108 @@
 <html>
     <head>
         <title>New Orleans Saints</title>
+        <link rel="stylesheet" type="text/css"  href="style.css">
     </head>
     <body>
-        <header>
-            <img src="images/fleur.png" width="260px" height="300px" alt="Saints fleur-de-lis logo" > &REG;
-            <h1>New Orleans Saints</h1>
-            <h2>Running for the ring</h2>
-        </header>
-        <section id="nav">
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">HOF</a></li>
-                <li><a href="#">Coaches</a></li>
-            </ul>
-        </section>
-        <section id="main">
-            <article>
+        <div class="container">
+            <header>
+                <img src="images/fleur.png" width="210px" height="250px" alt="Saints fleur-de-lis logo" > 
+                <p class="tm">&REG;</p>
+                <h1>New Orleans Saints</h1>
+                <h2>Running for the ring...<em>a brief survey of notable <br> Saints running backs.</em></h2>
+            </header>
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">HOF</a></li>
+                    <li><a href="#">Coaches</a></li>
+                </ul>
+            </nav>
+            <section id="left">
                 <img src="images/george.jpg" height="150px width="150px" alt="George Rogers">
-                <h3>George Rogers</h3>
-                <p>George Rogers was the number 1 overall pick in the NFL draft in 1981. A product of the University of South Carolina, 
-                    Rogers won the Heisman Trophy and went on to lead the NFL in rushing in 1981 with 1,674 yards--a record for a NFL rookie, 
-                    and a single-season record that still stands for the New Orleans franchise.  Rogers also scored 13 touchdowns that year, was
-                    named Rookie of the Year, and was selected to the Pro Bowl.</p>
-                <p>Rogers was traded to the Washington Redskins in 1985 and played three more seasons. In 1986 he led the NFL in rushing 
-                    touchdowns (18).  Despite playing only four years in New Orleans, he still ranks second all-time in franchise history in 
-                    rushing with 995 carries for 4,267 yards and 23 touchdowns. Rogers was named first team All-Pro in 1981 and earned Pro Bowl 
-                    honors in 1981 and 1982. He was inducted into the Saints Hall of Fame in 1992.</p>
-            </article>
-            <article>
                 <img src="images/ricky.jpg" height="150px width="150px" alt="Ricky Williams">
-                <h3>Ricky Williams</h3>
-                <p>On April 17th, 1999, the New Orleans Saints dealt their entire draft (8 picks) for the rights to select Ricky Williams with the 
-                    #5 pick of the first round. Williams came from the University of Texas Longhorn program where he set the NCAA record for rushing 
-                    yards in 1998 and won the Heisman Trophy. Williams had a disappointing rookie season due to various injuries that limited him to 
-                    884 rushing yards and two touchdowns in 12 games, and because he alienated his teammates with his off-field behavior. At the end 
-                    of the season, the Saints fired their Head Coach, Mike Ditka, who was responsible for the preceeding year's draft debacle, and 
-                    Williams publicly expressed his resentment towards both Ditka and the franchise. However, he rebounded with 1,000 or more rushing 
-                    yards in each of the next two seasons.</p>
-                <p>Trouble continued to swirl around the Saints' star running back as Williams began talking of switching from football to baseball. As 
-                    a precautionary move, the Saints drafted another runnning back, Deuce McAlister, in the 2001 draft. This resulted in further tension 
-                    between Williams and the Saints, and he was traded to the Miami Dolphins in 2002 in exchange for 3 draft picks over the next 2 years.  </p>
-            </article>
-            <article>
                 <img src="images/deuce.jpg" height="150px" width="150px"alt="Deuce McAllister">
-                <h3>Deuce McAllister</h3>
-                <p>"Deuce", a name that is almost synonymous with the New Orleans Saints in the eyes of loyal fans, was selected in the first round of 
-                    the 2001 NFL draft after a college stint with the Ole Miss Rebels. On the surface it seemed an odd pick since the Saints already had 
-                    a Heisman-Trophy running back, Ricky Williams, on their roster. But relations with Williams had been souring and New Orleans wanted
-                    a new face.  By 2002, McAllister's second season with the Saints, Williams was gone and it was Deuce's team. He rushed for a NFC-leading
-                    1,388 rushing yards and 13 touchdowns, and caught 47 passes for 352 yards and three scores. At the end of the year he was ranked sixth 
-                    in the NFL in rushing yards and earned Pro Bowl honors.  In 2003, he was even better, starting all 16 games for the only time in his 
-                    career. He rushed for 1,641 yards, fourth in the league, and scored eight touchdowns and caught a career-high 69 passes for 516 yards 
-                    as he made another Pro Bowl. The 1,641 yards were the second most in a single season in team history.</p>
-                <p> McAllister was part of the team that reached the NFC Championship game in 2006. He was so revered by the organization that they 
-                    re-signed him in 2009 for the playoffs. While he was never activated, he was allowed to lead the team onto the field in the playoffs 
-                    and was rewarded with a Super Bowl ring for the team's one and only Super Bowl championship. McAllister is the leading rusher in franchise 
-                    history with 1,429 carries for 6,096 yards. His 49 rushing touchdowns are the most in franchise history and he is second all-time in 
-                    touchdowns in franchise history with 55. He led the team in rushing in four different seasons and holds the team record with 27 games 
-                    of 100 or more rushing yards. McAllister was inducted into the Saints Hall of Fame in 2012. Deuce. In New Orleans that means Saints!</p>
-            </article>
-            <article>
                 <img src="images/reggie.jpg" height="150px" width="150px" alt="Reggie Bush">
-                <h3>Reggie Bush</h3>
-                <p>Reggie Bush played college football at USC where, during the 2005 season, he amassed 2,611 all-purpose yards, scored 18 touchdowns, and won
-                    the Heisman Trpophy as the most outstanding player in the nation. During his collegiate career Bush racked up 6,890 all-purpose yards and was 
-                    twice named a consensus All-American.</p>
-                <p>In January 2006, Bush declared himself eligible for the NFL Draft and the New Orleans Saints selected him as the second overall pick that
-                    year. Bush's arrival was much heralded in New Orleans, but his tenure there was marked by inconsistency and later by controversy over allegations 
-                    of improperly receiving gifts while at USC which resulted in him forfeiting his Heisman Trophy.  Bush was named an All-Pro in 2008 and was part of 
-                    the Saints team that won Super Bowl XLIV in 2010 over the Indianapolis Colts. In 2011 Bush was traded to the Miami Dolphins.</p>
-            </article>
-            <article>
                 <img src="images/mark.jpg" height="150px" width="150px" alt="Mark Ingrahm">
-                <h3>Mark Ingrahm</h3>
-                <p>After three years as the premier running back for the Crimson Tide of Alabama, Mark Ingrahm declared his eligibility for the NFL draft in January of
-                    2011, and was selected in the first round by the New Orleans Saints. His rookie season was marred by injuries and he finished the season with only 
-                    474 rushing yards and five touchdowns. In the succeeding years, Ingrahm developed a well-deserved reputation for explosive power and a physically
-                    punishing running style. His performance earned him an extension to his rookie contract, and he is part of the Saints' current running back duo, along
-                    with Alvin Kamara. Over his 8 seasons in New Orleans, Ingrahm has racked up 5,802 rushing yards and 1,562 receiving yards.</p>
-            </article> .
-            <article>
                 <img src="images/alvin.jpg" height="150px" width="150px" alt="Alvin Kamara">
-                <h3>Alvin Kamara</h3>
-                <p>Alvin Kamara is the newest addition to the Saints' stable of running backs, but he brings a twist--he can be used equally well as a reciever out of the
-                    back field.  This is something the Saints saw and began to develop in Reggie Bush, but Kamara is the one who has put it together seamlesly. After a short 
-                    stint at Alabama where he suffered a knee injury, Kamara transferred to teh UNiversity of Tennessee and played two years for teh Vols.  He declared for the 
-                    NFL draft in 2017 after amassing 2000 yards rushing and averaging a touchdown per game.</p>
-                <p>The New Orleans Saints drafted Kamara in the third round and since then he has split backfield duties with Mark Ingrahm.  The duo has terrorized NFL defenses 
-                    ever since. Kamara's 728 rushing yards and 826 receiving yards represented teh first 700/700 season in Saints history, while Ingrahm mached those numbers 
-                    making them the first running back duo ever to both rack up 1,500 total yards from scrimmage.  Kamara's outstanding play earned him the NFL Offensive Rookie 
-                    of the Year honors. Among non-quarterbacks with 100+ carries, his 6.07 yards per rush was the most ever by an NFL rookie, any Saints player, and the third 
-                    most by any NFL player since 1980.
-                </p>
-            </article>
-        </main>
-        <footer>
-            <p>&copy; &Tab; Mark Brown, 2019</p>
-        </footer>
+            </section>
+            <section id="right">    
+                <article>
+                    <h3>George Rogers</h3>
+                    <p>George Rogers was the number 1 overall pick in the NFL draft in 1981. A product of the University of South Carolina, 
+                        Rogers won the Heisman Trophy and went on to lead the NFL in rushing in 1981 with 1,674 yards--a record for a NFL rookie, 
+                        and a single-season record that still stands for the New Orleans franchise.  Rogers also scored 13 touchdowns that year, was
+                        named Rookie of the Year, and was selected to the Pro Bowl.</p>
+                    <p>Rogers was traded to the Washington Redskins in 1985 and played three more seasons. In 1986 he led the NFL in rushing 
+                        touchdowns (18).  Despite playing only four years in New Orleans, he still ranks second all-time in franchise history in 
+                        rushing with 995 carries for 4,267 yards and 23 touchdowns. Rogers was named first team All-Pro in 1981 and earned Pro Bowl 
+                        honors in 1981 and 1982. He was inducted into the Saints Hall of Fame in 1992.</p>
+                </article>
+                <article>                         
+                    <h3>Ricky Williams</h3>
+                    <p>On April 17th, 1999, the New Orleans Saints dealt their entire draft (8 picks) for the rights to select Ricky Williams with the 
+                        #5 pick of the first round. Williams came from the University of Texas Longhorn program where he set the NCAA record for rushing 
+                        yards in 1998 and won the Heisman Trophy. Williams had a disappointing rookie season due to various injuries that limited him to 
+                        884 rushing yards and two touchdowns in 12 games, and because he alienated his teammates with his off-field behavior. At the end 
+                        of the season, the Saints fired their Head Coach, Mike Ditka, who was responsible for the preceeding year's draft debacle, and 
+                        Williams publicly expressed his resentment towards both Ditka and the franchise. However, he rebounded with 1,000 or more rushing 
+                        yards in each of the next two seasons.</p>
+                    <p>Trouble continued to swirl around the Saints' star running back as Williams began talking of switching from football to baseball. As 
+                        a precautionary move, the Saints drafted another runnning back, Deuce McAlister, in the 2001 draft. This resulted in further tension 
+                        between Williams and the Saints, and he was traded to the Miami Dolphins in 2002 in exchange for 3 draft picks over the next 2 years.  </p>
+                </article>
+                <article>
+                    <h3>Deuce McAllister</h3>
+                    <p>"Deuce", a name that is almost synonymous with the New Orleans Saints in the eyes of loyal fans, was selected in the first round of 
+                        the 2001 NFL draft after a college stint with the Ole Miss Rebels. On the surface it seemed an odd pick since the Saints already had 
+                        a Heisman-Trophy running back, Ricky Williams, on their roster. But relations with Williams had been souring and New Orleans wanted
+                        a new face.  By 2002, McAllister's second season with the Saints, Williams was gone and it was Deuce's team. He rushed for a NFC-leading
+                        1,388 rushing yards and 13 touchdowns, and caught 47 passes for 352 yards and three scores. At the end of the year he was ranked sixth 
+                        in the NFL in rushing yards and earned Pro Bowl honors.  In 2003, he was even better, starting all 16 games for the only time in his 
+                        career. He rushed for 1,641 yards, fourth in the league, and scored eight touchdowns and caught a career-high 69 passes for 516 yards 
+                        as he made another Pro Bowl. The 1,641 yards were the second most in a single season in team history.</p>
+                    <p> McAllister was part of the team that reached the NFC Championship game in 2006. He was so revered by the organization that they 
+                        re-signed him in 2009 for the playoffs. While he was never activated, he was allowed to lead the team onto the field in the playoffs 
+                        and was rewarded with a Super Bowl ring for the team's one and only Super Bowl championship. McAllister is the leading rusher in franchise 
+                        history with 1,429 carries for 6,096 yards. His 49 rushing touchdowns are the most in franchise history and he is second all-time in 
+                        touchdowns in franchise history with 55. He led the team in rushing in four different seasons and holds the team record with 27 games 
+                        of 100 or more rushing yards. McAllister was inducted into the Saints Hall of Fame in 2012. Deuce. In New Orleans that means Saints!</p>
+                </article>
+                <article>
+                    <h3>Reggie Bush</h3>
+                    <p>Reggie Bush played college football at USC where, during the 2005 season, he amassed 2,611 all-purpose yards, scored 18 touchdowns, and won
+                        the Heisman Trpophy as the most outstanding player in the nation. During his collegiate career Bush racked up 6,890 all-purpose yards and was 
+                        twice named a consensus All-American.</p>
+                    <p>In January 2006, Bush declared himself eligible for the NFL Draft and the New Orleans Saints selected him as the second overall pick that
+                        year. Bush's arrival was much heralded in New Orleans, but his tenure there was marked by inconsistency and later by controversy over allegations 
+                        of improperly receiving gifts while at USC which resulted in him forfeiting his Heisman Trophy.  Bush was named an All-Pro in 2008 and was part of 
+                        the Saints team that won Super Bowl XLIV in 2010 over the Indianapolis Colts. In 2011 Bush was traded to the Miami Dolphins.</p>
+                </article>
+                <article>
+                    <h3>Mark Ingrahm</h3>
+                    <p>After three years as the premier running back for the Crimson Tide of Alabama, Mark Ingrahm declared his eligibility for the NFL draft in January of
+                        2011, and was selected in the first round by the New Orleans Saints. His rookie season was marred by injuries and he finished the season with only 
+                        474 rushing yards and five touchdowns. In the succeeding years, Ingrahm developed a well-deserved reputation for explosive power and a physically
+                        punishing running style. His performance earned him an extension to his rookie contract, and he is part of the Saints' current running back duo, along
+                        with Alvin Kamara. Over his 8 seasons in New Orleans, Ingrahm has racked up 5,802 rushing yards and 1,562 receiving yards.</p>
+                </article>
+                <article> 
+                    <h3>Alvin Kamara</h3>
+                    <p>Alvin Kamara is the newest addition to the Saints' stable of running backs, but he brings a twist--he can be used equally well as a reciever out of the
+                        back field.  This is something the Saints saw and began to develop in Reggie Bush, but Kamara is the one who has put it together seamlesly. After a short 
+                        stint at Alabama where he suffered a knee injury, Kamara transferred to the University of Tennessee and played two years for the Vols.  He declared for the 
+                        NFL draft in 2017 after amassing 2000 yards rushing and averaging a touchdown per game.</p>
+                    <p>The New Orleans Saints drafted Kamara in the third round and since then he has split backfield duties with Mark Ingrahm.  The duo has terrorized NFL defenses 
+                        ever since. Kamara's 728 rushing yards and 826 receiving yards represented teh first 700/700 season in Saints history, while Ingrahm mached those numbers 
+                        making them the first running back duo ever to both rack up 1,500 total yards from scrimmage.  Kamara's outstanding play earned him the NFL Offensive Rookie 
+                        of the Year honors. Among non-quarterbacks with 100+ carries, his 6.07 yards per rush was the most ever by an NFL rookie, any Saints player, and the third 
+                        most by any NFL player since 1980.</p>
+                </article>
+            </section>
+            <footer>
+                <p>&copy; &Tab; Mark Brown, 2019</p>
+            </footer>
+        </div>
     </body>
 
 
